# bioinformatics-algorithms-rs

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
benches/: distance.rs  matrix.rs
book/: 01-intro.Rmd  01-sequence-alignment.Rmd  README.md  _output.yml  index.Rmd  preamble.tex
docs/: book.epub  book.tex  index.html  intro.html  introduction.html  references.html  search_index.json  sequence-alignment.html  what-to-expect-from-this-repository.html
scripts/: update_librs_doc.py
src/: alignment.rs  lib.rs  main.rs  utils.rs
src/alignment/: distance.rs  needleman_wunsch.rs  pairwise.rs  scores.rs
src/alignment/distance/: hamming.rs  levenshtein.rs
src/alignment/pairwise/: gotoh.rs  gotoh_fast.rs  myers_miller.rs  needleman_wunsch_1.rs  needleman_wunsch_2.rs  needleman_wunsch_3.rs  smith_waterman_1.rs
src/alignment/scores/: blosum62.rs
src/utils/: matrix.rs
