[package]
name = "bio-edu"
version = "0.1.0"
authors = ["Tianyi Shi <ShiTianyi2001@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.4.0"
jemallocator = "0.3"
jemalloc-ctl = "0.3.3"
#jemallocator = "0.3.2"
jemalloc-sys = {version = "0.3", features = ["stats"]}
libc = "0.2"